# multi-agent-observability-demo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PUSH_PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  action.py  confidence.py  counterfactual.py  falsifier.py  graph.py  llm.py  reasoning.py  state.py  supervisor.py  telemetry.py
bench/: metrics.py  run_benchmark.py  scenarios.py
corpus/: causal_prior.py  generate.py  incidents.jsonl
docs/: architecture.md  code-walkthrough.md  design.md  failure-modes.md  file-reference.md  implementation-map.md  methodology.md  walkthrough.html
docs/notes/: why-add-a-falsifier.md
examples/: run_synthetic_incident.py  run_thermal_incident.py
tests/: test_action.py  test_benchmark.py  test_confidence.py  test_counterfactual.py  test_end_to_end.py  test_falsifier.py  test_reasoning.py  test_state.py  test_supervisor.py  test_telemetry.py
tools/: __init__.py  deploy_log_mock.py  logs_mock.py  prometheus_mock.py
