[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-observability-demo"
version = "0.1.0"
description = "Reference implementation of a multi-agent architecture for infrastructure incident investigation"
readme = "README.md"
authors = [{ name = "Kinjal Vaishnav" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langchain>=0.3.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
